# vaulpner

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  REPOSITORY_STATE.md
.github/workflows/: README.md  build-and-push.yml  security-scan.yml
examples/: deployment.yaml
examples/helm-chart/: Chart.yaml  values.yaml
src/: k8s.rs  lib.rs  main.rs  vault.rs
tests/: client_tests.rs  mod.rs
