[package]
name = "vaulpner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vaultrs = { version = "0.7.3", default-features = false, features = [ "native-tls" ] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tracing-subscriber = { version = "0.3", default-features = true }
tracing = { version = "0.1.41", features = ["async-await"] }
tokio = { version = "1.43.1", features = ["full"] }
