[package]
name = "vaulpner"
version = "0.0.1"
edition = "2021"
description = "A Kubernetes sidecar utility that automatically initializes and unseals HashiCorp Vault in development environments"
authors = ["Outside Orbit <contact@outsideorbit.com>"]
license = "MIT"
repository = "https://github.com/outsideorbit/vaulpner"
homepage = "https://github.com/outsideorbit/vaulpner"
documentation = "https://docs.rs/vaulpner"
keywords = ["vault", "kubernetes", "sidecar", "devops", "secrets"]
categories = ["development-tools", "web-programming::http-server"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vaultrs = { version = "0.7.3", default-features = false, features = [ "native-tls" ] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tracing-subscriber = { version = "0.3", default-features = true }
tracing = { version = "0.1.41", features = ["async-await"] }
tokio = { version = "1.43.1", features = ["full"] }
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
