[package]
name = "vaulpner"
version = "0.0.1"
edition = "2021"
description = "A Kubernetes sidecar utility that automatically initializes and unseals HashiCorp Vault in development environments"
authors = ["Outside Orbit <contact@outsideorbit.com>"]
license = "MIT"
repository = "https://github.com/outsideorbit/vaulpner"
homepage = "https://github.com/outsideorbit/vaulpner"
documentation = "https://docs.rs/vaulpner"
keywords = ["vault", "kubernetes", "sidecar", "devops", "secrets"]
categories = ["development-tools", "web-programming::http-server"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vaultrs = { version = "0.7.3", default-features = false, features = [ "native-tls" ] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tracing-subscriber = { version = "0.3", default-features = true }
tracing = { version = "0.1.41", features = ["async-await"] }
tokio = { version = "1.43.1", features = ["full"] }
base64 = "0.22.1"

# Force consistent versions to resolve duplicate dependencies
darling = "0.20.11"
darling_core = "0.20.11"
darling_macro = "0.20.11"
syn = "2.0.106"
synstructure = "0.13.2"
thiserror = "2.0.17"
thiserror-impl = "2.0.17"
getrandom = "0.3.3"
strsim = "0.11.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

# Note: Some transitive dependencies may still have version duplicates
# This is due to different crates requiring different versions of the same dependency
# The explicit versions above help minimize duplicates where possible
